@@ -227,7 +227,7 @@ do
   -- Matches if the output of a process contains <expect>.
   matchers.contain_output = ProcessMatcher {
     function (self, actual, expect)
-      return (string.match (actual.output, escape_pattern (expect)) ~= nil)
+      return (actual.output or ""):match (escape_pattern (expect)) ~= nil
     end,
 
     expecting = " output containing:", but_got_output,
@@ -237,7 +237,8 @@ do
   -- Matches if the process exits normally with output containing <expect>
   matchers.succeed_while_containing = ProcessMatcher {
     function (self, actual, expect)
-      return (actual.status == 0) and (string.match (actual.output, escape_pattern (expect)) ~= nil)
+      return (actual.status == 0) and
+             ((actual.output or ""):match (escape_pattern (expect)) ~= nil)
     end,
 
     expecting =  " exit status 0, with output containing:",
@@ -248,7 +249,7 @@ do
   -- Matches if the output of a process is exactly <expect>.
   matchers.output = ProcessMatcher {
     function (self, actual, expect)
-      return (actual.output == expect)
+      return actual.output == expect
     end,
 
     expecting = " output:", but_got_output,
@@ -268,7 +269,7 @@ do
   -- Matches if the output of a process matches <pattern>.
   matchers.match_output = ProcessMatcher {
     function (self, actual, pattern)
-      return (string.match (actual.output, pattern) ~= nil)
+      return (actual.output or ""):match (pattern) ~= nil
     end,
 
     expecting = " output matching:", but_got_output,
@@ -278,7 +279,8 @@ do
   -- Matches if the process exits normally with output matching <expect>
   matchers.succeed_while_matching = ProcessMatcher {
     function (self, actual, pattern)
-      return (actual.status == 0) and (string.match (actual.output, pattern) ~= nil)
+      return (actual.status == 0) and
+             ((actual.output or ""):match (pattern) ~= nil)
     end,
 
     expecting = " exit status 0, with output matching:",
@@ -289,7 +291,7 @@ do
   -- Matches if the exit status of a process is <expect>.
   matchers.fail = ProcessMatcher {
     function (self, actual)
-      return (actual.status ~= 0)
+      return actual.status ~= 0
     end,
 
     format_expect = function (self, expect)
@@ -303,7 +305,7 @@ do
   -- Matches if the error output of a process contains <expect>.
   matchers.contain_error = ProcessMatcher {
     function (self, actual, expect)
-      return (string.match (actual.errout, escape_pattern (expect)) ~= nil)
+      return (actual.errout or ""):match (escape_pattern (expect)) ~= nil
     end,
 
     expecting = " error output containing:", but_got_errout,
@@ -313,7 +315,8 @@ do
   -- Matches if the process exits normally with output containing <expect>
   matchers.fail_while_containing = ProcessMatcher {
     function (self, actual, expect)
-      return (actual.status ~= 0) and (string.match (actual.errout, escape_pattern (expect)) ~= nil)
+      return (actual.status ~= 0) and
+             ((actual.errout or ""):match (escape_pattern (expect)) ~= nil)
     end,
 
     expecting = " non-zero exit status, with error output containing:",
@@ -324,7 +327,7 @@ do
   -- Matches if the error output of a process is exactly <expect>.
   matchers.output_error = ProcessMatcher {
     function (self, actual, expect)
-      return (actual.errout == expect)
+      return actual.errout == expect
     end,
 
     expecting = " error output:", but_got_errout,
@@ -345,7 +348,7 @@ do
   -- Matches if the error output of a process matches <pattern>.
   matchers.match_error = ProcessMatcher {
     function (self, actual, pattern)
-      return (string.match (actual.errout, pattern) ~= nil)
+      return (actual.errout or ""):match (pattern) ~= nil
     end,
 
     expecting = " error output matching:", but_got_errout,
@@ -355,7 +358,8 @@ do
   -- Matches if the process exits normally with output matching <expect>
   matchers.fail_while_matching = ProcessMatcher {
     function (self, actual, pattern)
-      return (actual.status ~= 0) and (string.match (actual.errout, pattern) ~= nil)
+      return (actual.status ~= 0) and
+             ((actual.errout or ""):match (pattern) ~= nil)
     end,
 
     expecting = " non-zero exit status, with error output matching:",
